--- a/src/App.css
+++ b/src/App.css
@@ -80,12 +80,12 @@ html {
   bottom: -3px; /* Slightly below the text */
   width: 0;
   height: 2px;
-  background-color: #f4faff; /* Underline color */
+  background-color: #70bfff;
   transition: width 0.4s ease;
 }
 
 .nav-link:hover {
-  color: #f4faff;
+  color: #70bfff;
 }
 
 .nav-link:hover::after {
@@ -181,15 +181,68 @@ html {
 
 .btn-exploreproduct:hover {
   background-color: rgba(0, 0, 0, 0.4); /* Darker on hover */
-  /* transform: scale(1.05); */
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
 }
 
+/* slider */
+
+.home-sliding-images {
+  overflow: hidden;
+  width: 100%;
+  padding: 40px 30px;
+}
+
+.slider-track {
+  display: flex;
+  width: max-content;
+  animation: scroll-left 50s linear infinite;
+  gap: 100px; /* spacing between items */
+}
+
+.slider-item {
+  flex: 0 0 auto;
+  width: 150px;
+  height: 200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.slider-item img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 8px;
+}
+
+.slider-item p {
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.home-sliding-images .btn-exploreproduct {
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
 .home-info {
-  padding: 2rem 2rem;
+  padding: 0 2rem;
   background-color: rgba(255, 255, 255, 0.95);
   text-align: center;
-  margin-top: 1rem;
 }
 
 .home-info h2 {
@@ -221,15 +274,8 @@ html {
   border: 2px solid rgba(255, 255, 255, 0.1); /* subtle white border */
   border-radius: 15px;
 
-  background: linear-gradient(
-    135deg,
-    rgba(161, 196, 253, 0.3) 0%,
-    rgba(194, 233, 251, 0.3) 100%
-  );
-
   backdrop-filter: blur(10px); /* glass blur */
   -webkit-backdrop-filter: blur(10px); /* Safari support */
-  color: #ffffff; /* white text for visibility */
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1); /* soft shadow */
   transition: transform 0.3s ease;
 }
@@ -251,7 +297,11 @@ html {
   flex-wrap: wrap;
   border-radius: 20px;
   padding: 2rem;
-  background-color: white;
+  background: linear-gradient(
+    135deg,
+    rgba(161, 196, 253, 0.3) 0%,
+    rgba(194, 233, 251, 0.3) 100%
+  );
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2); /* Softer black shadow */
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
@@ -290,12 +340,6 @@ html {
 
 .about-container {
   min-height: 100vh;
-  background: linear-gradient(
-    to bottom right,
-    #eff6ff,
-    #ffffff,
-    #fef9c3
-  ); /* from-blue-50 via-white to-yellow-50 */
   padding: 3rem 1rem;
   display: flex;
   align-items: center;
@@ -450,6 +494,7 @@ html {
   }
 }
 
+.about-section,
 .contact-section,
 .products-section,
 .services-section {
@@ -663,7 +708,7 @@ html {
 
 .footer-link {
   position: relative;
-  color: #ffeaea;
+  color: #e5e7eb;
   text-decoration: none;
   display: inline-block;
   margin-bottom: 10px;
@@ -691,7 +736,7 @@ html {
 }
 
 .footer-contact {
-  color: #ffeaea;
+  color: #e5e7eb;
   margin-bottom: 12px;
   margin-top: 0;
 }
@@ -704,7 +749,7 @@ html {
 
 .social-icon {
   font-size: 22px;
-  color: white;
+  color: #e5e7eb;
   transition: transform 0.3s, color 0.3s;
 }
 
