--- a/src/App.css
+++ b/src/App.css
@@ -76,12 +76,12 @@ html {
   bottom: -3px;
   width: 0;
   height: 2px;
-  background-color: #70bfff;
+  background-color: #2da0ff;
   transition: width 0.4s ease;
 }
 
 .nav-link:hover {
-  color: #70bfff;
+  color: #2da0ff;
 }
 
 .nav-link:hover::after {
@@ -266,8 +266,7 @@ html {
   padding: 3rem 2rem;
   min-height: 300px;
 
-  background-image: url("https://www.transparenttextures.com/patterns/white-wall-3.png"),
-    linear-gradient(to right, #e0ecff, #f5f9ff);
+  background-image: linear-gradient(to right, #e0ecff, #f5f9ff);
   background-blend-mode: multiply;
   background-repeat: repeat;
   background-size: auto;
@@ -790,8 +789,12 @@ html {
 
 /* footer styles */
 .footer-container {
-  background: linear-gradient(to right, #3b59d1, #5a72e6);
-  color: white;
+  background: linear-gradient(
+    to right,
+    rgb(59, 89, 209),
+    rgba(90, 114, 230, 1)
+  );
+  color: rgb(255, 255, 255);
   padding: 60px 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -840,6 +843,7 @@ html {
   display: inline-block;
   margin-bottom: 10px;
   padding-bottom: 2px;
+  font-size: 1rem;
 
   transition: color 0.3s ease, transform 0.3s ease;
 }
@@ -851,7 +855,7 @@ html {
   bottom: 0;
   width: 100%;
   height: 2px;
-  background-color: #facc15;
+  background-color: #ffffff;
 
   transform: scaleX(0);
   transform-origin: left;
@@ -859,7 +863,7 @@ html {
 }
 
 .footer-link:hover {
-  color: #facc15;
+  color: #ffffff;
   transform: translateX(4px);
 }
 
@@ -868,9 +872,17 @@ html {
 }
 
 .footer-contact {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   color: #e5e7eb;
-  margin-bottom: 12px;
-  margin-top: 0;
+  font-size: 1rem;
+  margin: 6px 0;
+}
+
+.footer-icon {
+  font-size: 1rem;
+  color: #ffffff;
 }
 
 .footer-socials {
@@ -880,14 +892,15 @@ html {
 }
 
 .social-icon {
-  font-size: 22px;
-  color: #e5e7eb;
+  font-size: 24px;
+  color: #ffffff;
   transition: transform 0.3s, color 0.3s;
 }
 
 .social-icon:hover {
-  color: #facc15;
+  color: #ffffff;
   transform: scale(1.2);
+  font-weight: bold;
 }
 
 .footer-bottom {
@@ -895,8 +908,8 @@ html {
   margin-top: 50px;
   padding-top: 20px;
   font-size: 14px;
-  color: #9ca3af;
-  border-top: 1px solid #4b5563;
+  color: #acb9d0;
+  border-top: 1px solid #6e7d91;
 }
 
 @media (max-width: 768px) {
